15Feb18  * run_get_phylomarkers_pipeline.sh 'v2.1.7_15Feb18'; added more DEBUG INFO to initial FASTA sanity checks
         * fixed typos in manual

12Feb18  * added html-based manual and tutorial, with table of contents, under https://vinuesa.github.io/get_phylomarkers

11Feb18: * run_get_phylomarkers_pipeline.sh 'v2.1.5_11Feb18' is more shellcheck-compliant
         * get_script_PID in get_phylomarkers_fun_lib now uses pgrep; the library is more shellcheck-compliant

8Feb18: # 1. Changes to estimate_pangenome_phylogenies.sh v1.0.1_8Feb18
           * Added: -v flag; check_scripts_in_path(); check_dependencies with verbosity; activated set_pipeline_environment; should find dependencies: Thanks to Felipe Lira
	   * v1.0.3_8Feb18; fix in set_pipeline_environment: changed to readlink -n when $OSTYPE -> darwin
	  2. Changes in run_get_phylomarkers_pipeline.sh 'v2.1.4_8Feb18' v2.1.4_8Feb18
	   * fixed set_pipeline_environment (removed DEBUG messages, which broke the function return when the script was run with -D; fixed for darwin: scriptdir=$(readlink -n "${BASH_SOURCE[0]}")

7Feb18: * Moved print_codon_tables() back from get_phylomarkers_fun_lib to run_get_phylomarkers_pipeline.sh v2.1.3_7Feb18 so that -C can print them; Thanks to Stefano Romano!
        * relocated the assignment of logdir to top of main script; edited INSTALL.md, README.md and manual.md

5Feb18: * Extended the tutorial on exploring the container's environment and file system
        * Updated the README.md file to include links to the tutorial and install instructions of the Docker environment and container usage
4Feb18: * -v flag also prints list of required system binaries, like GET_HOMOLOGUES; minor fix in cleanup code.

3Feb18: * Extended the INSTALL.md file to include instructions on how to setup a locak Docker environment and run image instances